--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -193,7 +193,18 @@
     "id": "sk_8DFcuL9ey",
     "outputId": "dd60a271-3457-465d-e16a-41acf12a56ab"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2\n",
+      "6\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "print(x + 1)   # Addition\n",
     "print(x - 1)   # Subtraction\n",
@@ -203,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -212,7 +223,16 @@
     "id": "U4Jl8K0tL9e4",
     "outputId": "07e3db14-3781-42b7-8ba6-042b3f9f72ba"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "x += 1\n",
     "print(x)\n",
@@ -222,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -231,7 +251,16 @@
     "id": "w-nZ0Sg_L9e9",
     "outputId": "3aa579f8-9540-46ef-935e-be887781ecb4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "2.5 3.5 5.0 6.25\n"
+     ]
+    }
+   ],
    "source": [
     "y = 2.5\n",
     "print(type(y))\n",
