--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -307,7 +307,15 @@
     "id": "RvoImwgGL9fE",
     "outputId": "1517077b-edca-463f-857b-6a8c386cd387"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'bool'>\n"
+     ]
+    }
+   ],
    "source": [
     "t, f = True, False\n",
     "print(type(t))"
@@ -324,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -333,7 +341,18 @@
     "id": "6zYm7WzCL9fK",
     "outputId": "f3cebe76-5af4-473a-8127-88a1fd60560f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(t and f) # Logical AND;\n",
     "print(t or f)  # Logical OR;\n",
@@ -352,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -361,7 +380,15 @@
     "id": "AijEDtPFL9fP",
     "outputId": "2a6b0cd7-58f1-43cf-e6b7-bf940d532549"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello 5\n"
+     ]
+    }
+   ],
    "source": [
     "hello = 'hello'   # String literals can use single quotes\n",
     "world = \"world\"   # or double quotes; it does not matter\n",
@@ -370,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -379,7 +406,15 @@
     "id": "saDeaA7hL9fT",
     "outputId": "2837d0ab-9ae5-4053-d087-bfa0af81c344"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "hw = hello + ' ' + world  # String concatenation\n",
     "print(hw)"
