--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -431,7 +431,15 @@
     "id": "Nji1_UjYL9fY",
     "outputId": "0149b0ca-425a-4a34-8e24-8dff7080922e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world 12\n"
+     ]
+    }
+   ],
    "source": [
     "hw12 = '{} {} {}'.format(hello, world, 12)  # string formatting\n",
     "print(hw12)"
@@ -448,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -457,7 +465,20 @@
     "id": "VOxGatlsL9fd",
     "outputId": "ab009df3-8643-4d3e-f85f-a813b70db9cb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "HELLO\n",
+      "  hello\n",
+      " hello \n",
+      "he(ell)(ell)o\n",
+      "world\n"
+     ]
+    }
+   ],
    "source": [
     "s = \"hello\"\n",
     "print(s.capitalize())  # Capitalize a string\n",
@@ -515,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -524,7 +545,16 @@
     "id": "hk3A8pPcL9fp",
     "outputId": "b545939a-580c-4356-db95-7ad3670b46e4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 1, 2] 2\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "xs = [3, 1, 2]   # Create a list\n",
     "print(xs, xs[2])\n",
@@ -533,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -542,7 +572,15 @@
     "id": "YCjCy_0_L9ft",
     "outputId": "417c54ff-170b-4372-9099-0f756f8e48af"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 1, 'foo']\n"
+     ]
+    }
+   ],
    "source": [
     "xs[2] = 'foo'    # Lists can contain elements of different types\n",
     "print(xs)"
@@ -550,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -559,7 +597,15 @@
     "id": "vJ0x5cF-L9fx",
     "outputId": "a97731a3-70e1-4553-d9e0-2aea227cac80"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 1, 'foo', 'bar']\n"
+     ]
+    }
+   ],
    "source": [
     "xs.append('bar') # Add a new element to the end of the list\n",
     "print(xs)  "
