--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -622,7 +622,15 @@
     "id": "cxVCNRTNL9f1",
     "outputId": "508fbe59-20aa-48b5-a1b2-f90363e7a104"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bar [3, 1, 'foo']\n"
+     ]
+    }
+   ],
    "source": [
     "x = xs.pop()     # Remove and return the last element of the list\n",
     "print(x, xs)"
@@ -657,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -666,7 +674,21 @@
     "id": "ninq666bL9f6",
     "outputId": "c3c2ed92-7358-4fdb-bbc0-e90f82e7e941"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4]\n",
+      "[2, 3]\n",
+      "[2, 3, 4]\n",
+      "[0, 1]\n",
+      "[0, 1, 2, 3, 4]\n",
+      "[0, 1, 2, 3]\n",
+      "[0, 1, 8, 9, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = list(range(5))    # range is a built-in function that creates a list of integers\n",
     "print(nums)         # Prints \"[0, 1, 2, 3, 4]\"\n",
@@ -699,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -708,7 +730,17 @@
     "id": "4cCOysfWL9gA",
     "outputId": "560e46c7-279c-409a-838c-64bea8d321c4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n",
+      "dog\n",
+      "monkey\n"
+     ]
+    }
+   ],
    "source": [
     "animals = ['cat', 'dog', 'monkey']\n",
     "for animal in animals:\n",
@@ -726,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -735,7 +767,17 @@
     "id": "JjGnDluWL9gF",
     "outputId": "81421905-17ea-4c5a-bcc0-176de19fd9bd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#1: cat\n",
+      "#2: dog\n",
+      "#3: monkey\n"
+     ]
+    }
+   ],
    "source": [
     "animals = ['cat', 'dog', 'monkey']\n",
     "for idx, animal in enumerate(animals):\n",
@@ -762,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -771,7 +813,15 @@
     "id": "IVNEwoMXL9gL",
     "outputId": "d571445b-055d-45f0-f800-24fd76ceec5a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [0, 1, 2, 3, 4]\n",
     "squares = []\n",
