--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -850,7 +850,15 @@
     "id": "kZxsUfV6L9gR",
     "outputId": "4254a7d4-58ba-4f70-a963-20c46b485b72"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [0, 1, 2, 3, 4]\n",
     "squares = [x ** 2 for x in nums]\n",
@@ -868,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -877,7 +885,15 @@
     "id": "yUtgOyyYL9gV",
     "outputId": "1ae7ab58-8119-44dc-8e57-fda09197d026"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16]\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [0, 1, 2, 3, 4]\n",
     "even_squares = [x ** 2 for x in nums if x % 2 == 0]\n",
@@ -904,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -913,7 +929,16 @@
     "id": "XBYI1MrYL9gb",
     "outputId": "8e24c1da-0fc0-4b4c-a3e6-6f758a53b7da"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cute\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "d = {'cat': 'cute', 'dog': 'furry'}  # Create a new dictionary with some data\n",
     "print(d['cat'])       # Get an entry from a dictionary; prints \"cute\"\n",
@@ -922,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -931,7 +956,15 @@
     "id": "pS7e-G-HL9gf",
     "outputId": "feb4bf18-c0a3-42a2-eaf5-3fc390f36dcf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wet\n"
+     ]
+    }
+   ],
    "source": [
     "d['fish'] = 'wet'    # Set an entry in a dictionary\n",
     "print(d['fish'])      # Prints \"wet\""
@@ -939,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -948,7 +981,19 @@
     "id": "tFY065ItL9gi",
     "outputId": "7e42a5f0-1856-4608-a927-0930ab37a66c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'monkey'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3532/3521650589.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'monkey'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# KeyError: 'monkey' not a key of d\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 'monkey'"
+     ]
+    }
+   ],
    "source": [
     "print(d['monkey'])  # KeyError: 'monkey' not a key of d"
    ]
