--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -989,7 +989,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_3532/3521650589.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'monkey'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# KeyError: 'monkey' not a key of d\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_8400/3521650589.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'monkey'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# KeyError: 'monkey' not a key of d\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m: 'monkey'"
      ]
     }
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1009,7 +1009,16 @@
     "id": "8TjbEWqML9gl",
     "outputId": "ef14d05e-401d-4d23-ed1a-0fe6b4c77d6f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N/A\n",
+      "wet\n"
+     ]
+    }
+   ],
    "source": [
     "print(d.get('monkey', 'N/A'))  # Get an element with a default; prints \"N/A\"\n",
     "print(d.get('fish', 'N/A'))    # Get an element with a default; prints \"wet\""
@@ -1017,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1026,7 +1035,15 @@
     "id": "0EItdNBJL9go",
     "outputId": "652a950f-b0c2-4623-98bd-0191b300cd57"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N/A\n"
+     ]
+    }
+   ],
    "source": [
     "del d['fish']        # Remove an element from a dictionary\n",
     "print(d.get('fish', 'N/A')) # \"fish\" is no longer a key; prints \"N/A\""
@@ -1052,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1061,7 +1078,17 @@
     "id": "rYfz7ZKNL9gs",
     "outputId": "155bdb17-3179-4292-c832-8166e955e942"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A person has 2 legs\n",
+      "A cat has 4 legs\n",
+      "A spider has 8 legs\n"
+     ]
+    }
+   ],
    "source": [
     "d = {'person': 2, 'cat': 4, 'spider': 8}\n",
     "for animal, legs in d.items():\n",
@@ -1079,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1088,7 +1115,15 @@
     "id": "8PB07imLL9gz",
     "outputId": "e9ddf886-39ed-4f35-dd80-64a19d2eec9b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 0, 2: 4, 4: 16}\n"
+     ]
+    }
+   ],
    "source": [
     "nums = [0, 1, 2, 3, 4]\n",
     "even_num_to_square = {x: x ** 2 for x in nums if x % 2 == 0}\n",
@@ -1115,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1124,7 +1159,16 @@
     "id": "MmyaniLsL9g2",
     "outputId": "8f152d48-0a07-432a-cf98-8de4fd57ddbb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "animals = {'cat', 'dog'}\n",
     "print('cat' in animals)   # Check if an element is in a set; prints \"True\"\n",
