--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -989,7 +989,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_8400/3521650589.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'monkey'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# KeyError: 'monkey' not a key of d\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_4320/3521650589.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'monkey'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# KeyError: 'monkey' not a key of d\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m: 'monkey'"
      ]
     }
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1186,7 +1186,16 @@
     "id": "ElJEyK86L9g6",
     "outputId": "b9d7dab9-5a98-41cd-efbc-786d0c4377f7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "animals.add('fish')      # Add an element to a set\n",
     "print('fish' in animals)\n",
@@ -1195,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1204,7 +1213,16 @@
     "id": "5uGmrxdPL9g9",
     "outputId": "e644d24c-26c6-4b43-ab15-8aa81fe884d4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "animals.add('cat')       # Adding an element that is already in the set does nothing\n",
     "print(len(animals))       \n",
@@ -1223,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1232,7 +1250,17 @@
     "id": "K47KYNGyL9hA",
     "outputId": "4477f897-4355-4816-b39b-b93ffbac4bf0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#1: fish\n",
+      "#2: cat\n",
+      "#3: dog\n"
+     ]
+    }
+   ],
    "source": [
     "animals = {'cat', 'dog', 'fish'}\n",
     "for idx, animal in enumerate(animals):\n",
@@ -1250,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1259,7 +1287,15 @@
     "id": "iw7k90k3L9hC",
     "outputId": "72d6b824-6d31-47b2-f929-4cf434590ee5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 1, 2, 3, 4, 5}\n"
+     ]
+    }
+   ],
    "source": [
     "from math import sqrt\n",
     "print({int(sqrt(x)) for x in range(30)})"
@@ -1285,7 +1321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1294,7 +1330,17 @@
     "id": "9wHUyTKxL9hH",
     "outputId": "cdc5f620-04fe-4b0b-df7a-55b061d23d88"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "5\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "d = {(x, x + 1): x for x in range(10)}  # Create a dictionary with tuple keys\n",
     "t = (5, 6)       # Create a tuple\n",
