--- a/assignment_01.ipynb
+++ b/assignment_01.ipynb
@@ -989,7 +989,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13828/3521650589.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'monkey'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# KeyError: 'monkey' not a key of d\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6184/3521650589.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'monkey'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# KeyError: 'monkey' not a key of d\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mKeyError\u001b[0m: 'monkey'"
      ]
     }
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1009,16 +1009,7 @@
     "id": "8TjbEWqML9gl",
     "outputId": "ef14d05e-401d-4d23-ed1a-0fe6b4c77d6f"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N/A\n",
-      "wet\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(d.get('monkey', 'N/A'))  # Get an element with a default; prints \"N/A\"\n",
     "print(d.get('fish', 'N/A'))    # Get an element with a default; prints \"wet\""
@@ -1026,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1035,15 +1026,7 @@
     "id": "0EItdNBJL9go",
     "outputId": "652a950f-b0c2-4623-98bd-0191b300cd57"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "N/A\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "del d['fish']        # Remove an element from a dictionary\n",
     "print(d.get('fish', 'N/A')) # \"fish\" is no longer a key; prints \"N/A\""
@@ -1069,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1106,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1150,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1177,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1204,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1241,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1255,9 +1238,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#1: fish\n",
-      "#2: dog\n",
-      "#3: cat\n"
+      "#1: dog\n",
+      "#2: cat\n",
+      "#3: fish\n"
      ]
     }
    ],
@@ -1278,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1321,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1351,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1368,7 +1351,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13828/1253691622.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_6184/1253691622.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mt\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
@@ -1397,7 +1380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1441,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1491,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1558,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {
     "id": "58QdX8BLL9hZ"
    },
@@ -1596,7 +1579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1605,7 +1588,16 @@
     "id": "-l3JrGxCL9hc",
     "outputId": "8d9dad18-c734-4a8a-ca8c-44060a40fb79"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'> (3,) 1 2 3\n",
+      "[5 2 3]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1, 2, 3])  # Create a rank 1 array\n",
     "print(type(a), a.shape, a[0], a[1], a[2])\n",
@@ -1615,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1624,7 +1616,16 @@
     "id": "ma6mk-kdL9hh",
     "outputId": "0b54ff2f-e7f1-4b30-c653-9bf81cb8fbb0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "b = np.array([[1,2,3],[4,5,6]])   # Create a rank 2 array\n",
     "print(b)"
@@ -1632,7 +1633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1641,7 +1642,16 @@
     "id": "ymfSHAwtL9hj",
     "outputId": "5bd292d8-c751-43b9-d480-f357dde52342"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "1 2 4\n"
+     ]
+    }
+   ],
    "source": [
     "print(b.shape)\n",
     "print(b[0, 0], b[0, 1], b[1, 0])"
@@ -1658,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1667,7 +1677,16 @@
     "id": "mVTN_EBqL9hn",
     "outputId": "d267c65f-ba90-4043-cedb-f468ab1bcc5d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0. 0.]\n",
+      " [0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.zeros((2,2))  # Create an array of all zeros\n",
     "print(a)"
@@ -1675,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1684,7 +1703,15 @@
     "id": "skiKlNmlL9h5",
     "outputId": "7d1ec1b5-a1fe-4f44-cbe3-cdeacad425f1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "b = np.ones((1,2))   # Create an array of all ones\n",
     "print(b)"
@@ -1692,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1701,7 +1728,16 @@
     "id": "HtFsr03bL9h7",
     "outputId": "2688b157-2fad-4fc6-f20b-8633207f0326"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[7 7]\n",
+      " [7 7]]\n"
+     ]
+    }
+   ],
    "source": [
     "c = np.full((2,2), 7) # Create a constant array\n",
     "print(c)"
@@ -1709,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1718,7 +1754,16 @@
     "id": "-QcALHvkL9h9",
     "outputId": "5035d6fe-cb7e-4222-c972-55fe23c9d4c0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0.]\n",
+      " [0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "d = np.eye(2)        # Create a 2x2 identity matrix\n",
     "print(d)"
