--- a/assignment_02.ipynb
+++ b/assignment_02.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -113,17 +113,17 @@
     "\n",
     "# ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "# YOUR CODE HERE\n",
-    "x           = \n",
-    "size_x      = \n",
-    "type_x      = \n",
+    "x           = np.matrix([[1.,2.,3.],[4.,5.,6.]])\n",
+    "size_x      = np.shape(x)\n",
+    "type_x      = x.dtype\n",
     "\n",
-    "y           = \n",
-    "size_y      = \n",
-    "type_y      = \n",
+    "y           = np.array([1.,2.,3.])\n",
+    "size_y      = np.shape(y)\n",
+    "type_y      = y.dtype\n",
     "\n",
-    "z           = \n",
-    "size_z      = \n",
-    "type_z      = \n",
+    "z           = np.array([1.])\n",
+    "size_z      = np.shape(z)\n",
+    "type_z      = z.dtype \n",
     "#\n",
     "# ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "\n",
