--- a/assignment_02.ipynb
+++ b/assignment_02.ipynb
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -519,14 +519,14 @@
     "\n",
     "# ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "# YOUR CODE HERE\n",
-    "A       = \n",
-    "size_A  = \n",
+    "A       = np.matrix([[1.,2.],[3.,4.],[5.,6.]])\n",
+    "size_A  = np.shape(A)\n",
     "\n",
-    "x       = \n",
-    "size_x  = \n",
+    "x       = np.array([[10.],[20.]])\n",
+    "size_x  = np.shape(x)\n",
     "\n",
-    "y       = \n",
-    "size_y  = \n",
+    "y       = A*x\n",
+    "size_y  = np.shape(y)\n",
     "#\n",
     "# ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "\n",
