--- a/assignment_02.ipynb
+++ b/assignment_02.ipynb
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -675,14 +675,14 @@
     "\n",
     "# ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "# YOUR CODE HERE\n",
-    "A       = \n",
-    "size_A  = \n",
+    "A       = np.matrix([[1.,2.],[3.,4.],[5.,6.]])\n",
+    "size_A  = np.shape(A)\n",
     "\n",
-    "X       = \n",
-    "size_X  = \n",
+    "X       = np.matrix([[10.,20.],[30.,40.]])\n",
+    "size_X  = np.shape(X)\n",
     "\n",
-    "Y       = \n",
-    "size_Y  = \n",
+    "Y       = A*X\n",
+    "size_Y  = np.shape(Y)\n",
     "#\n",
     "# ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "\n",
