--- a/assignment_03_2.ipynb
+++ b/assignment_03_2.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
     "    # ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "    # complete the blanks\n",
     "    #\n",
-    "    y_hat = function(x0) + derivative_function(x0)(x-x0)\n",
+    "    y_hat = function(x0) + derivative_function(x0)*(x-x0)\n",
     "    #\n",
     "    # ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
     "\n",
