Define name 'compute_derivative_x_forward' function

--- a/assignment_03_1.ipynb
+++ b/assignment_03_1.ipynb
@@ -183,7 +183,10 @@
     "    # complete the blanks\n",
     "    #\n",
     "    \n",
+    "    I_shift2 = np.roll(I,shift=-1,axis=0)\n",
+    "    I_shift2[-1,:] = I_shift2[-2,:]\n",
     "    \n",
+    "    D = I_shift2 - I\n",
     "    \n",
     "    #\n",
     "    # ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
