Run shells about 'x(row)-direction'

--- a/assignment_03_1.ipynb
+++ b/assignment_03_1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,10 @@
     "    # complete the blanks\n",
     "    #\n",
     "    \n",
+    "    I_shift3 = np.roll(I,shift=1,axis=0)\n",
+    "    I_shift3[0,:] = I_shift3[1,:]\n",
     "    \n",
+    "    D = I - I_shift3\n",
     "    \n",
     "    #\n",
     "    # ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
@@ -232,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +247,12 @@
     "    # complete the blanks\n",
     "    #\n",
     "    \n",
+    "    I_shift2 = np.roll(I,shift=-1,axis=0)\n",
+    "    I_shift2[-1,:] = I_shift2[-2,:]\n",
+    "    I_shift3 = np.roll(I,shift=1,axis=0)\n",
+    "    I_shift3[0,:] = I_shift3[1,:]\n",
     "    \n",
+    "    D = 0.5*(I_shift2 - I_shift3)\n",
     "    \n",
     "    #\n",
     "    # ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
