--- a/assignment_03_1.ipynb
+++ b/assignment_03_1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,10 @@
     "    # complete the blanks\n",
     "    #\n",
     "    \n",
+    "    I_shift0 = np.roll(I, shift=-1)\n",
+    "    I_shift0[:,-1] = I_shift0[:,-2]\n",
     "    \n",
+    "    D = I_shift0 - I\n",
     "    \n",
     "    #\n",
     "    # ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
@@ -305,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +320,10 @@
     "    # complete the blanks\n",
     "    #\n",
     "    \n",
+    "    I_shift1 = np.roll(I,shift=1)\n",
+    "    I_shift1[:,0] = I_shift1[:,1]\n",
     "    \n",
+    "    D = I - I_shift1\n",
     "    \n",
     "    #\n",
     "    # ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
@@ -334,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +352,12 @@
     "    # complete the blanks\n",
     "    #\n",
     "    \n",
+    "    I_shift0 = np.roll(I, shift=-1)\n",
+    "    I_shift0[:,-1] = I_shift0[:,-2]\n",
+    "    I_shift1 = np.roll(I,shift=1)\n",
+    "    I_shift1[:,0] = I_shift1[:,1]\n",
     "    \n",
+    "    D = 0.5*(I_shift0 - I_shift1)\n",
     "    \n",
     "    #\n",
     "    # ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
