Modify code function 'compute_norm_gradient_central'

--- a/assignment_03_1.ipynb
+++ b/assignment_03_1.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +396,7 @@
     "    dx = compute_derivative_x_central(I)\n",
     "    dy = compute_derivative_y_central(I)\n",
     "    \n",
-    "    norm_gradient = np.sqrt(dx*dx + dy*dy)\n",
+    "    norm_gradient = dx*dx + dy*dy\n",
     "    \n",
     "    #\n",
     "    # ++++++++++++++++++++++++++++++++++++++++++++++++++\n",
